@@ -3,8 +3,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.StringTokenizer;
-import java.util.stream.Collectors;
 import java.util.List;
+import java.util.Collections;
 
 class solve2512{
 
@@ -20,28 +20,28 @@ class solve2512{
         for(int i=0;i<numOflocal;i++){
             budgets.add(Integer.parseInt(inputBudgets.nextToken()));
         }
+        Collections.sort(budgets);
+
         totalBudget = Integer.parseInt(br.readLine());
     }
 
     void init(){
+
         result = totalBudget/numOflocal;
         totalBudget -= result * numOflocal;
-    }
 
-    void init2(){
-        
         for(int i=0;i<budgets.size();i++){
             int tmp = budgets.get(i) - result;
+            budgets.set(i, tmp);
             if(tmp < 0){
                 totalBudget -= tmp;
             }
-            budgets.set(i, tmp);
         }
 
         budgets = budgets.stream()
             .filter(budget -> budget > 0)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
     }
 
     void init3(){
@@ -51,18 +51,28 @@ class solve2512{
 
         if(sum > totalBudget){
             result += totalBudget / budgets.size();
-        }
-        else {
+        } else {
             result += budgets.get(budgets.size()-1);
         }
+    }
+
+    int getSumOfLocal(){
+
+        return budgets.stream()
+            .reduce(0, (a, b) -> a + b);
     }
 
     void run(BufferedReader br) throws IOException{
         
         input(br);
-        init();
-        init2();
-        init3();
+
+        int sum = getSumOfLocal();
+        if(sum < totalBudget){
+            result += budgets.get(budgets.size() - 1);
+        }
+        else {
+            init();
+        }
 
         System.out.println(result);
     }
